--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "date-fns": "^2.28.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "date-fns": "^2.28.0",
     "jotai": "^1.6.5",
     "prettier": "^2.6.2",
     "prop-types": "^15.8.1",
@@ -29,6 +29,7 @@
     "react-flow-renderer": "^10.1.2",
     "react-hook-form": "^7.30.0",
     "react-redux": "^8.0.1",
+    "react-resizable": "^3.0.4",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
