--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": "14.19,1",
+    "npm": "6.14.16"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
